--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@ html {
   scroll-snap-type: y mandatory;
 }
 
+.app {
+  background-color: black;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
 .app_videos {
   position: relative;
   height: 800px;
@@ -10,4 +17,13 @@ html {
   width: 80%;
   max-width: 500px;
   scroll-snap-type: y mandatory;
+}
+
+.app_videos::-webkit-scrollbar {
+  display: none;
+}
+
+.app_videos {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
