--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -1,7 +1,8 @@
 .video {
   position: relative;
   /* relative to parent, App Video container */
-  border: 1px solid black;
+  border: 5px solid pink;
+  background-color: white;
   height: 100%;
   width: 100%;
   scroll-snap-align: start;
