--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -1,9 +1,14 @@
 .video {
   position: relative;
   /* relative to parent, App Video container */
-  border: 5px solid pink;
   background-color: white;
   height: 100%;
   width: 100%;
   scroll-snap-align: start;
+}
+
+.video__player {
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
 }
